--- a/styles/header.scss
+++ b/styles/header.scss
@@ -129,5 +129,5 @@
 }
 
 .fa-house {
-  padding-right: 0.3rem;
+  padding-right: 0.1rem;
 }
